[gd_scene load_steps=3 format=3 uid="uid://vs7sbb4j4bpq"]

[ext_resource type="Script" path="res://load_image.gd" id="1_l8ks6"]

[sub_resource type="GDScript" id="GDScript_vip8t"]
script/source = "extends Button

"

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8ks6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
root_subfolder = "C:/"
filters = PackedStringArray("*.jpg", "*.jpeg", "*.png", "*.bmp")
use_native_dialog = true

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 69.0
offset_right = 384.0
offset_bottom = 199.0
theme_override_font_sizes/font_size = 25
text = "CLICK TO LOAD AN IMAGE"

[node name="Label" type="Label" parent="Load"]
layout_mode = 0
offset_left = 359.0
offset_top = 46.0
offset_right = 848.0
offset_bottom = 73.0

[node name="Grayscale" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 239.0
offset_right = 385.0
offset_bottom = 289.0
selected = 0
item_count = 5
popup/item_0/text = "Off"
popup/item_1/text = "Grayscale 1"
popup/item_1/id = 1
popup/item_2/text = "Grayscale 2"
popup/item_2/id = 2
popup/item_3/text = "Grayscale 3"
popup/item_3/id = 3
popup/item_4/text = "Grayscale 4"
popup/item_4/id = 4
script = SubResource("GDScript_vip8t")

[node name="ExtractRGB" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 320.0
offset_right = 385.0
offset_bottom = 370.0
text = "EXTRACT R, G, B"

[node name="ConvertToHSV" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 399.0
offset_right = 385.0
offset_bottom = 449.0
text = "CONVERT TO HSV"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Load" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Load" to="Load" method="_on_pressed"]
[connection signal="item_selected" from="Grayscale" to="." method="_on_grayscale_item_selected"]
[connection signal="pressed" from="ExtractRGB" to="." method="_on_extract_rgb_pressed"]
[connection signal="pressed" from="ConvertToHSV" to="." method="_on_convert_to_hsv_pressed"]
